Attempted to fix the issue with play trackbar overlapping the mini-player icon

--- a/src/scss/_player.scss
+++ b/src/scss/_player.scss
@@ -41,3 +41,7 @@ paper-slider::shadow .ring > #sliderKnob > #sliderKnobInner {
     }
   }
 }
+
+#player paper-icon-button[data-id='show-miniplayer'] {
+  z-index: 1;
+}
